{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 146,
  "lineage": "8316129c-85c8-b60e-e3a7-b70dddd75f5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:internet-gateway/igw-0b273dc6008b77119",
            "id": "igw-0b273dc6008b77119",
            "owner_id": "976193236212",
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:route-table/rtb-0eaf8b41d11d748f4",
            "id": "rtb-0eaf8b41d11d748f4",
            "owner_id": "976193236212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b273dc6008b77119",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8d508d3ecc88d09",
            "route_table_id": "rtb-0eaf8b41d11d748f4",
            "subnet_id": "subnet-064d4ce55f818922a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d4d34f004b7d22b",
            "route_table_id": "rtb-0eaf8b41d11d748f4",
            "subnet_id": "subnet-0d3f93605dc58b226"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e496bd99a2984ac",
            "route_table_id": "rtb-0eaf8b41d11d748f4",
            "subnet_id": "subnet-09ad6e4c9595f6a96"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f8f90faf94a5907",
            "route_table_id": "rtb-0eaf8b41d11d748f4",
            "subnet_id": "subnet-0885bf7c439f9d573"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:security-group/sg-0d71988b4be01b713",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d71988b4be01b713",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gn-mmbatch13miniwdl",
            "name_prefix": "",
            "owner_id": "976193236212",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:subnet/subnet-064d4ce55f818922a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064d4ce55f818922a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976193236212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:subnet/subnet-0d3f93605dc58b226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f93605dc58b226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976193236212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:subnet/subnet-09ad6e4c9595f6a96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ad6e4c9595f6a96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976193236212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:subnet/subnet-0885bf7c439f9d573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0885bf7c439f9d573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976193236212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            },
            "vpc_id": "vpc-010e1859c196ef418"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976193236212:vpc/vpc-010e1859c196ef418",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070b6bc32d86669f1",
            "default_route_table_id": "rtb-030972109d2359df1",
            "default_security_group_id": "sg-0057b313b94a0b1c4",
            "dhcp_options_id": "dopt-0a1a821ffbb7f1af9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010e1859c196ef418",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030972109d2359df1",
            "owner_id": "976193236212",
            "tags_all": {
              "Environment": "gn-mmbatch13miniwdl",
              "Owner": "gauri.nagavkar@memverge.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}